--- a/src/main/resources/Cars.html
+++ b/src/main/resources/Cars.html
@@ -13,7 +13,7 @@
     let xhr = new XMLHttpRequest();
     let url = 'http://localhost:8001/add';
     xhr.open("POST", url, true);
-    xhr.setRequestHeader('Content-type', 'application/json;charset=UTF-8');
+    xhr.setRequestHeader('Content-type', 'application/json;charset=utf-8');
     var data = JSON.stringify({ "number": number.value, "brand": brand.value, "color":color.value, "year_of_issue":year_of_issue.value });
     xhr.onreadystatechange = function () {
         if (xhr.status === 200 & xhr.readyState == 4) {
